# dalia

./: .gitignore  Cargo.toml  Justfile  LICENSE  README.md  flake.nix
.github/ISSUE_TEMPLATE/: bug_report.md
dalia/: Cargo.toml
dalia-tui/: Cargo.toml
dalia-tui/src/: main.rs
dalia/src/: directory.rs  lib.rs  metadata.rs  mimetype.rs
src/: directory.rs  image.rs  main.rs  metadata.rs  mimetype.rs
