[package]
name = "dalia"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
infer = "0.8"
walkdir = "2.3"
kamadak-exif = "0.5"
chrono = "0.4"
log = "0.4"
pretty_env_logger = "0.4"
thiserror = "1.0"
